--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,9 @@
 body{
   font-size: 16px;
+
   background: #E5E7E9
 }
+
 
 .title{
   background: url(https://i.imgur.com/HQbgknF.gif);
@@ -21,6 +23,10 @@ body{
   margin-bottom: -20px;
 }
 
+.title1{
+
+}
+
 .titleWords{
     position: absolute;
     left:900px;
@@ -36,16 +42,30 @@ button{
 }
 
 #modalSubmit{
+
   float: left;
+}
+
+#logoImg{
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  top: 100px;
+  left: 300px;
+
 }
 
 #addItem1, #addItem2, #addItem3{
   float: left;
+
+
+
 }
 
-#addItem2, #addItem3, #item-form2, #item-form3, .aboutUs, .contactUs, #createAccount, #confirmEmail, #loginInfo, #additembutton,#logout,#logoutInfo{
+#addItem2, #addItem3, #item-form2, #item-form3, .aboutUs, .contactUs, #createAccount{
   display: none;
 }
+
 
 #btnOK{
   border:1px solid #000;
@@ -70,16 +90,7 @@ button{
   width: 500px;
 }
 
-#confirmEmail{
-  margin-top: 20px;
-  width: 400px;
-  font-size: 20px;
-  height: 230px;
-  position: absolute;
-  left: 120px;
-  font-weight: normal;
-  text-align: center;
-}
+
 
 
 .well {
@@ -93,7 +104,6 @@ button{
   margin-top: 20px;
   width: 1200px;
   font-size: 20px;
-  height: 300px;
 }
 
 #contact{
@@ -117,7 +127,7 @@ button{
     height: auto;
 }
 
-.navbar a{
+.navbar a {
     float: right;
     font-size: 16px;
     color: white;
@@ -176,9 +186,5 @@ button{
 
 img{
   height: 200px;
-  width: 300px;
-}
-
-#imgInp1, #imgInp2, #imgInp3{
-  display: none
+  width: 200px;
 }
